@@ -42,13 +42,18 @@ springBoot {
 }
 
 
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(25)
+    }
+}
+
+
 def allJvmArgs = [
     '-Dspring.output.ansi.enabled=always',
-    '-XX:+TieredCompilation',
     '-XX:TieredStopAtLevel=1',
     '-XX:CICompilerCount=3',
     '-Xmx' + localDevXmx,
-    "--add-modules=java.se",
     "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
     "--add-opens=java.base/java.lang=ALL-UNNAMED",
     "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
@@ -82,7 +87,7 @@ dependencies {
     // Database drivers - H2 for temporary in-memory DB with `useH2: true` in instanceConfig YAML
     // MySQL for deployed instances, or more stateful local workstation setups.
     runtimeOnly "com.h2database:h2"
-    runtimeOnly "mysql:mysql-connector-java:8.0.33"
+    runtimeOnly "com.mysql:mysql-connector-j:8.4.0"
 
     // Stifle dev errors on Macs
     developmentOnly "io.methvin:directory-watcher:0.19.1"
